<resources>
    <string name="app_name">CarConsumptionManager</string>
    <string name="total_consume_detail">消费总览</string>
    <string name="total_consume">总消费</string>
    <string name="down_payments">首付</string>
    <string name="monthly_payment">月供</string>
    <string name="oil">加油</string>
    <string name="charge">充电</string>
    <string name="park">停车费</string>
    <string name="toll_fee">高速过路费</string>
    <string name="view_detail">查看详情</string>
    <string name="consume_details">消费详情</string>
    <string name="consume_type">消费类型</string>
    <string name="consume_money">消费金额</string>
    <string name="consume_date">消费时间</string>
    <string name="consume_position">消费地点</string>
    <string name="oil_type">汽油类型</string>
    <string name="oil_unit">升</string>
    <string name="oil_price_unit">元/升</string>
    <string name="money_unit">元</string>
    <string name="oil_capacity">油量</string>
    <string name="oil_price">油价</string>
    <string name="submit">提交</string>
</resources>