<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.ConsumeCreateActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/consume_type" />

            <Spinner
                android:id="@+id/consume_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="100dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <!--汽油类型-->
        <TableRow
            android:id="@+id/oil_type_row"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/oil_type" />

            <Spinner
                android:id="@+id/oil_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="100dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <!--汽油加了多少L-->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/oil_capacity" />

            <EditText
                android:id="@+id/oil_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="100dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oil_unit" />
        </TableRow>

        <!--油价-->
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/oil_price" />

            <EditText
                android:id="@+id/oil_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="100dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oil_price_unit" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/consume_money" />

            <EditText
                android:id="@+id/consume_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="100dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_unit" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/consume_date" />

            <EditText
                android:id="@+id/consume_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="100dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/consume_position" />

            <EditText
                android:id="@+id/consume_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="100dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit" />
</LinearLayout>