<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total_consume" />

            <TextView
                android:id="@+id/total_consume"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:id="@+id/total_consume_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/view_detail" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/down_payments" />

            <TextView
                android:id="@+id/down_payments"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:id="@+id/down_payments_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/view_detail" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/monthly_payment" />

            <TextView
                android:id="@+id/monthly_payment"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:id="@+id/monthly_payment_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/view_detail" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/oil" />

            <TextView
                android:id="@+id/oil"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:id="@+id/oil_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/view_detail" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/charge" />

            <TextView
                android:id="@+id/charge"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:id="@+id/charge_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/view_detail" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/toll_fee" />

            <TextView
                android:id="@+id/toll_fee"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:id="@+id/toll_fee_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/view_detail" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/park" />

            <TextView
                android:id="@+id/park"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center" />

            <Button
                android:id="@+id/park_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/view_detail" />
        </TableRow>
    </TableLayout>
</LinearLayout>